--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,46 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+  background-color: #f5f5f5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  color: #333333;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  padding: 0 1rem;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dotoBody {
+  width: 50%;
+  margin: auto;
+  margin-top: 30px;
+}
+.btnAdd {
+  display: inline-block;
+  /* border: none;
+  background-color: #555;
+  color: #fff;
+  padding: 7px 20px; */
+  cursor: pointer;
+
+  background-color:#fc999b;
+  color:#ffffff;
+  border-radius: 5px;
+  text-align:center;
+  /* margin-top:2px; */
+  padding: 2px 3px;
+  margin-left: 5px;
+}
+.btnAdd:hover {
+  background-color: #666;
 }
